additional math operations and editor fixes